@@ -1,6 +1,7 @@
 2.21.2
  - enh: when batch-loading datasets, allow individual files to fail
  - enh: auto-select logs in AnalysisView
+ - enh: improve table graph selection (remember graph, clear if unavailable)
 2.21.1
  - fix: maximize image size in QuickView
  - fix: colormap for QPI data only updating for one image view in QuickView
